--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-bot.name=SendMeNewsDemoBot
-bot.token=6218831020:AAEqKFICT04hrhx_m8wD6Yz9HjOC2IK9d9w
+bot.name=
+bot.token=
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
